@startuml
AwFDObserver <|-- AwFDConnector
AwSubject <|-- AwFD
AwSubject o-- AwObserver
AwFD <|-- AwSocket
AwFD --* AwProcess
AwPoll <|-- AwApp
AwPoll o-- AwFD
AwObserver <|-- AwFDObserver
AwObserver o-- AwSubject

class AwApp {
 +getArgs()
 +getOptionValue( ... )
 -args : std::vector<const char *>
}

class AwFDObserver {
 {abstract} +onReadable()
 {abstract} +onWritable()
}

class AwObserver {
 -subjects : std::vector<AwSubject *>
 -addSubject(AwSubject *) : int
 -removeSubject(AwSubject *) : int
}

class AwSubject {
 +addObserver()
 +notify()
 -observers : std::vector<AwObserver *>
}

class AwFD {
 +write()
 +read()
 #fd : int
}

class AwProcess {
 +write()
 +read()
 +readErr()
 #fd_stdin : AwFD
 #fd_stdout : AwFD
 #fd_stderr : AwFD
}

@enduml
